@@ -1,4 +1,4 @@
-# Copyright (c) 2002-2018 "Neo4j,"
+# Copyright (c) 2002-2020 "Neo4j,"
 # Neo4j Sweden AB [http://neo4j.com]
 #
 # This file is part of Neo4j.
@@ -31,7 +31,7 @@ An object representing a valid Neo4j Server object
 Retrieve the Java command line to start a Neo4j Server
 
 .PARAMETER ForUtility
-Retrieve the Java command line to start a Neo4j utility such as Neo4j Shell.
+Retrieve the Java command line to start a Neo4j utility such as Neo4j Admin.
 
 .PARAMETER StartingClass
 The name of the starting class when invoking Java
@@ -82,8 +82,6 @@ function Get-Java
     if (($javaPath -eq '') -and ($EnvJavaHome -ne $null))
     {
       $javaPath = $EnvJavaHome
-      # Modify the java path if a JRE install is detected
-      if (Test-Path -Path "$javaPath\jre\bin\java.exe") { $javaPath = "$javaPath\jre" }
     }
 
     # Attempt to find Java in registry
@@ -146,13 +144,12 @@ function Get-Java
     $javaVersion = Get-JavaVersion -Path $javaCMD
     if (-not $javaVersion.isValid) { Write-Error "This instance of Java is not supported"; return $null }
 
-    # Shell arguments for the Neo4jServer and Arbiter classes
+    # Shell arguments for the Neo4jServer
     $ShellArgs = @()
     if ($PsCmdlet.ParameterSetName -eq 'ServerInvoke')
     {
       $serverMainClass = 'org.neo4j.server.enterprise.EnterpriseEntryPoint'
       if ($Neo4jServer.ServerType -eq 'Community') { $serverMainClass = 'org.neo4j.server.CommunityEntryPoint' }
-      if ($Neo4jServer.DatabaseMode.ToUpper() -eq 'ARBITER') { $serverMainClass = 'org.neo4j.server.enterprise.ArbiterEntryPoint' }
 
       if ($serverMainClass -eq '') { Write-Error "Unable to determine the Server Main Class from the server information"; return $null }
 
@@ -160,9 +157,6 @@ function Get-Java
       $ClassPath = "$($Neo4jServer.Home)/lib/*;$($Neo4jServer.Home)/plugins/*"
       $ShellArgs = @("-cp `"$($ClassPath)`"" `
           ,'-server' `
-          ,'-Dlog4j.configuration=file:conf/log4j.properties' `
-          ,'-Dneo4j.ext.udc.source=zip-powershell' `
-          ,'-Dorg.neo4j.cluster.logdirectory=data/log' `
         )
 
       # Parse Java config settings - Heap initial size
@@ -208,63 +202,30 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
       # Parse Java config settings - GC
       $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.enabled' -Neo4jServer $Neo4jServer)
       if (($option -ne $null) -and ($option.value.ToLower() -eq 'true')) {
-        if ($javaVersion.isJava8) {
-          # JAVA 8 GC logs configuration
-          $ShellArgs += "-Xloggc:`"$($Neo4jServer.LogDir)/gc.log`""
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
-          if ($option -eq $null) {
-            $ShellArgs += @('-XX:+PrintGCDetails',
-              '-XX:+PrintGCDateStamps',
-              '-XX:+PrintGCApplicationStoppedTime',
-              '-XX:+PrintPromotionFailure',
-              '-XX:+PrintTenuringDistribution',
-              '-XX:+UseGCLogFileRotation')
-          } else {
-            # The GC options _should_ be space delimited
-            $ShellArgs += ($option.value -split ' ')
-          }
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $ShellArgs += "-XX:GCLogFileSize=$( $option.value )"
-          } else {
-            $ShellArgs += "-XX:GCLogFileSize=20m"
-          }
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $ShellArgs += "-XX:NumberOfGCLogFiles=$( $option.value )"
-          } else {
-            $ShellArgs += "-XX:NumberOfGCLogFiles=5"
-          }
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions = $option.value
         } else {
-          # JAVA 9 and newer GC logs configuration
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $gcOptions = $option.value
-          } else {
-            $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
-          }
-          # GC file name should be escaped on Windows because of ':' usage as part of absolute name
-          $gcFile = "\`"" + "$($Neo4jServer.LogDir)/gc.log" + "\`""
-          $gcOptions += ":file=$( $gcFile )::"
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $gcOptions += "filecount=$( $option.value )"
-          } else {
-            $gcOptions += "filecount=5"
-          }
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $gcOptions += ",filesize=$( $option.value )"
-          } else {
-            $gcOptions += ",filesize=20m"
-          }
-          $ShellArgs += $gcOptions
+          $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
         }
+        # GC file name should be escaped on Windows because of ':' usage as part of absolute name
+        $gcFile = "\`"" + "$($Neo4jServer.LogDir)/gc.log" + "\`""
+        $gcOptions += ":file=$( $gcFile )::"
+
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions += "filecount=$( $option.value )"
+        } else {
+          $gcOptions += "filecount=5"
+        }
+
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions += ",filesize=$( $option.value )"
+        } else {
+          $gcOptions += ",filesize=20m"
+        }
+        $ShellArgs += $gcOptions
       }
       $ShellArgs += @("-Dfile.encoding=UTF-8",
         $serverMainClass,
@@ -272,13 +233,11 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
         "--home-dir=`"$($Neo4jServer.Home)`"")
     }
 
-    # Shell arguments for the utility classes e.g. Import, Shell
+    # Shell arguments for the utility classes e.g. Admin
     if ($PsCmdlet.ParameterSetName -eq 'UtilityInvoke')
     {
       # Generate the commandline args
       $ClassPath = "$($Neo4jServer.Home)/lib/*;$($Neo4jServer.Home)/bin/*"
-      # Augment with tools.jar if found
-      if (Test-Path -Path "$EnvJavaHome\lib\tools.jar") { $ClassPath += ";$EnvJavaHome\lib\tools.jar" }
 
       $ShellArgs = @()
       $ShellArgs += @("-XX:+UseParallelGC",
